--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>Your final score is <span id="finalScore"></span></h2>
                     <form>
                         <p>Enter your initials: <input id="initialInput">
-                            <button type="submit" id="submitInitialBtn">Submit</button>
+                            <button type="submit" id="submitInitials">Submit</button>
                         </p>
                     </form>
                 </div>
